tests/NormalTests/paczka1/fuzzy1/48342938.err
Error in line 4: MO8tUlA S321 341,58
Error in line 5: s96FY1 A608 83,D
Error in line 11: 45zF9cZ S321 39,53
Error in line 1: MO8tUlA S321 97,1
Error in line 35: MO8tUlA A608 37,9
Error in line 37: MO8tUlA S321 19,4
